# TrOMA

./: .buildinfo  .gitignore  README.md  genindex.html  objects.inv  output.txt  public_api.html  py-modindex.html  pyproject.toml  searchindex.js  smoke_test.py  test_script.py
.github/workflows/: docs.yml  publish.yml
_sources/: index.rst.txt
_sources/api/: troma.decoding.rst.txt  troma.optimization.rst.txt
api/: modules.html  troma.decoding.html  troma.html  troma.optimization.html  troma.sketchs.html
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  public_api.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  public_api.html  py-modindex.html  search.html  searchindex.js
docs/api/: modules.rst  troma.decoding.rst
examples/: demo quantum_hardware.ipynb  demo.ipynb  demo_embeddings.ipynb  demo_v2.ipynb
examples/problems_generator/: compressible_opt_pb.py  compressive_sensing_pb.py
src/myopt/: abstract.py  data_structure.py  decoding_proced.py  explicit.py  main_to_delete.ipynb  optimization.py  quantum_map.py  quantum_opt.py  utils.py
src/myopt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/troma/: __init__.py  _validation.py  combinatorial_problem.py  data_structure.py  embedding.py  matching_pursuit.py  mcco_workflow.py  modeling.py  pipelines.py  problem_sketch.py  sketch_map.py
src/troma/core/: data_structure.py  (+4 more)
tests/: test_abstract.py  test_data_structure.py  test_decoding.py  test_embedding.py  test_modeling.py  test_optimization.py  test_sketchs.py  test_structure.py
(+30 files in other folders)
