[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "troma"
version = "1.1"
description = "Optimization tools for research"
authors = [
  {name = "Baptiste Chevalier"}
]
dependencies = [
  "numpy",
  "scipy",
  "qiskit_aer",
  "dwave-neal"
]

[tool.setuptools.packages.find]
where = ["src"]